Write for loop to iterate throiugh jason file and populate info

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Job Board</title>
-  </head>
-  <body>
-    <div class="container">
-      <h1>Job Search</h1>
+<html>
+<head>
+  <title>Job Board</title>
+</head>
+<body>
+  <div class="container">
+    <h1>Job Search</h1>
 
     <form id="job-search">
       <label for="jobkeyword" id="jobkeyword">Enter Keyword:</label>
@@ -16,12 +15,11 @@
       <button type="submit" class="btn btn-info" name="button">Search</button>
     </form>
 
-    <div id="show">
+    <div class="populate"></div>
 
-    </div>
-    <div id="showErrors">
 
-    </div>
+    <div id="showErrors"></div>
+
   </div>
-  </body>
+</body>
 </html>
