add css and company to cards

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link href="https://fonts.googleapis.com/css?family=Lalezar&display=swap" rel="stylesheet">
   <title>Job Board</title>
 </head>
 <body>
@@ -9,10 +10,10 @@
 
     <form id="job-search">
       <label for="jobkeyword" id="jobkeyword">Enter Keyword:</label>
-      <input type="text" id="job-keyword" name="job-keyword" required>
+      <input type="text" id="job-keyword" name="job-keyword">
       <label for="location" id="location">Enter Location:</label>
       <input type="text" id="location-keyword" name="location-keyword" required>
-      <button type="submit" class="btn btn-info" name="button">Search</button>
+      <button type="submit" class="btn btn-primary btn-lg" name="button">Search</button>
     </form>
 
     <div class="populate"></div>
