display jobs from second API onto DOM now

--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,9 @@
       <button type="submit" class="btn btn-primary btn-lg" name="button">Search</button>
     </form>
 
-    <div class="populate"></div>
+    <div id="ghpopulate"></div>
 
+    <div id="ajpopulate"></div>
 
     <div id="showErrors"></div>
 
