Add if statement to solve empty arrray return bug

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Job Search</h1>
+    <h1 id="site-title">Job Search</h1>
 
     <form id="job-search">
       <label for="jobkeyword" id="jobkeyword">Enter Keyword:</label>
