--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <link href="https://fonts.googleapis.com/css?family=Lalezar&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Faster+One|Press+Start+2P&display=swap" rel="stylesheet">
   <title>Job Board</title>
 </head>
 <body>
