Add div to inform user of how many results, keyword searched and location searched

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,10 @@
       <button type="submit" class="btn btn-primary btn-lg" name="button">Search</button>
     </form>
 
+    <div id="results">
+      <p>Found <span id="fount"></span> results for "<span id="user-keyword"></span>" in "<span id="user-location"></span>."</p>
+    </div>
+
     <div id="ghpopulate"></div>
 
     <div id="ajpopulate"></div>
